# Amazon_Reviews

./: .gitignore  main.ipynb  pyproject.toml  variables.py
utils/: aggregations.py  data_io.py  filters.py  models.py
